# Ecommmerce-api-py

db/: docker-compose.yaml
server/: .env  main.py  pyproject.toml
server/models/: customer_model.py
server/schemas/: orm_init.py  schemas.py
